@@ -1,3 +1,9 @@
+MPU6050 Arduino Library 1.0.3 / 03.03.2015
+======================================================================
+
+ * Added setDLPFMode(mpu6050_dlpf_t dlpf) function
+   MPU6050_DLPF_0...6 (see datatsheet)
+
 MPU6050 Arduino Library 1.0.2 / 10.02.2015
 ======================================================================
 
